2023_frameworks/go_websocket/deployments/misc/hello01_pod.yaml
apiVersion: v1
kind: Pod

metadata: { name: hello01 }

spec:
  volumes:
  - name: hello-data
    hostPath: { path: "/app/hello-data", type: "DirectoryOrCreate" }
  # - name: logFile
    # hostPath: { path: "/var/local/aaa/log.txt", type: "FileOrCreate" }

  containers:
  - name: hello01
    image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/hello:main

    resources:
      # 500MHz, 128Mi(power-of-two)
      requests: { cpu: "200m", memory: "128Mi" }
      limits: { cpu: "500m", memory: "256Mi" }

    volumeMounts:
    # readOnly: true
    - { name: "hello-data", mountPath: "/opt/hello/data", subPathExpr: "$(POD_NAME)" }

    livenessProbe:
      # HTTP Status >= 200 and < 400
      httpGet: { path: "/debug/healthy", port: 1030 }
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3

    ports:
    - { name: "http", containerPort: 8080, protocol: "TCP" }
    - { name: "pprof", containerPort: 1030, protocol: "TCP" }

    # command: ["./main", "-addr", ":8080"]
    # args: ["$(MESSAGE)"]
